--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <table id="planets">
     <tr>
       <th></th>
-      <th>Planet 1</th>
-      <th>Planet 2</th>
-      <th>Planet 3</th>
-      <th>Planet 4</th>
+      <th>EARTH</th>
+      <th>MOON</th>
+      <th>NEPTUNE</th>
+      <th>JUPITER</th>
     </tr>
     <tr>
       <td>Images of ??</td>
@@ -23,53 +23,55 @@
       <td><img src="images/planet_4.png" alt="?"></td>
     </tr>
     <tr>
-      <td>Fact #1</td>
+      <td>Mass(10<span>24</span>kg)</td>
+      <td>5.97</td>
+      <td>0.073</td>
+      <td>102</td>
+      <td>???</td>
+    </tr>
+    <tr>
+      <td>Diameter(km)</td>
+      <td>12,756</td>
+      <td>3475</td>
       <td>???</td>
       <td>???</td>
+    </tr>
+	<tr>
+      <td>Gravity(m/s<span>2</span>))</td>
+      <td>9.8</td>
+      <td>1.6</td>
+      <td>???</td>
+      <td>???</td>
+    </tr>
+	 <tr>
+      <td>Distance from Sun(106 km)</td>
+      <td>149.6</td>
+      <td>0.384</td>
+      <td>4515</td>
+      <td>???</td>
+    </tr>
+    <tr>
+      <td>Rotation Period(hours)</td>
+      <td>23.9</td>
+      <td>655.7</td>
       <td>???</td>
       <td>???</td>
     </tr>
     <tr>
-      <td>Fact #2</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #3</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Length of Day(hours)</td>
+      <td>24.0</td>
+      <td>708.7</td>
       <td>???</td>
       <td>???</td>
     </tr>
-    <tr>
-      <td>Fact #4</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #5</td>
-      <td>???</td>
-      <td>???</td>
+	 <tr>
+      <td>Orbital Period(days)</td>
+      <td>365.2</td>
+      <td>27.3</td>
       <td>???</td>
       <td>???</td>
     </tr>
-    <tr>
-      <td>Fact #6</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #7</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
+   
   </table>
 </body>
+</html>
