--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <th></th>
       <th>EARTH</th>
-      <th>MOON</th>
+      <th>MARS</th>
       <th>NEPTUNE</th>
       <th>JUPITER</th>
     </tr>
@@ -25,51 +25,51 @@
     <tr>
       <td>Mass(10<span>24</span>kg)</td>
       <td>5.97</td>
-      <td>0.073</td>
+      <td>0.642	</td>
       <td>102</td>
-      <td>???</td>
+      <td>1898</td>
     </tr>
     <tr>
       <td>Diameter(km)</td>
       <td>12,756</td>
-      <td>3475</td>
-      <td>???</td>
-      <td>???</td>
+      <td>6792</td>
+      <td>49,528</td>
+      <td>142,984</td>
     </tr>
 	<tr>
       <td>Gravity(m/s<span>2</span>))</td>
       <td>9.8</td>
-      <td>1.6</td>
-      <td>???</td>
-      <td>???</td>
+      <td>3.7</td>
+      <td>11</td>
+      <td>23.1</td>
     </tr>
 	 <tr>
       <td>Distance from Sun(106 km)</td>
       <td>149.6</td>
-      <td>0.384</td>
+      <td>228</td>
       <td>4515</td>
-      <td>???</td>
+      <td>778.5</td>
     </tr>
     <tr>
       <td>Rotation Period(hours)</td>
       <td>23.9</td>
-      <td>655.7</td>
-      <td>???</td>
-      <td>???</td>
+      <td>24.6</td>
+      <td>16.1</td>
+      <td>9.9</td>
     </tr>
     <tr>
       <td>Length of Day(hours)</td>
       <td>24.0</td>
-      <td>708.7</td>
-      <td>???</td>
-      <td>???</td>
+      <td>24.7</td>
+      <td>16.1</td>
+      <td>9.9</td>
     </tr>
 	 <tr>
       <td>Orbital Period(days)</td>
       <td>365.2</td>
-      <td>27.3</td>
-      <td>???</td>
-      <td>???</td>
+      <td>687</td>
+      <td>59,800</td>
+      <td>4331</td>
     </tr>
    
   </table>
