--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <tr>
       <td>Images of Plants</td>
       <td><img src="images/earth.jpg" alt="a vector earth image has terrain in the land and cloud layers as detail. The image is placed on a starry sky as background."></td>
-      <td><img src="images/mars" alt="a vector mars uses majorly red and brown as detail. The top of mars has a part that is colored gray. The image is placed on a starry sky as background."></td>
-      <td><img src="images/neptune" alt="A vector neptune image is colored in sea blue and dark blue on the surface as detail. Some sky blue dots represent clouds. The image is placed on a starry sky as background."></td>
+      <td><img src="images/mars.jpg" alt="a vector mars uses majorly red and brown as detail. The top of mars has a part that is colored gray. The image is placed on a starry sky as background."></td>
+      <td><img src="images/neptune.jpg" alt="A vector neptune image is colored in sea blue and dark blue on the surface as detail. Some sky blue dots represent clouds. The image is placed on a starry sky as background."></td>
       <td><img src="images/jupiter.jpg" alt="a vector jupiter image has sky blue and earth yellow to create details of the surface. The image is placed on a starry sky as background."></td>
     </tr>
     <tr>
