--- a/index.html
+++ b/index.html
@@ -6,71 +6,81 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Planetary Fact Sheet</h1>
-  <table id="planets">
-    <tr>
-      <th></th>
-      <th>EARTH</th>
-      <th>MARS</th>
-      <th>NEPTUNE</th>
-      <th>JUPITER</th>
-    </tr>
-    <tr>
-      <td>Images of Plants</td>
-      <td><img src="images/earth.jpg" alt="a vector earth image has terrain in the land and cloud layers as detail. The image is placed on a starry sky as background."></td>
-      <td><img src="images/mars.jpg" alt="a vector mars uses majorly red and brown as detail. The top of mars has a part that is colored gray. The image is placed on a starry sky as background."></td>
-      <td><img src="images/neptune.jpg" alt="A vector neptune image is colored in sea blue and dark blue on the surface as detail. Some sky blue dots represent clouds. The image is placed on a starry sky as background."></td>
-      <td><img src="images/jupiter.jpg" alt="a vector jupiter image has sky blue and earth yellow to create details of the surface. The image is placed on a starry sky as background."></td>
-    </tr>
-    <tr>
-      <td>Mass(10<span>24</span>kg)</td>
-      <td>5.97</td>
-      <td>0.642	</td>
-      <td>102</td>
-      <td>1898</td>
-    </tr>
-    <tr>
-      <td>Diameter(km)</td>
-      <td>12,756</td>
-      <td>6792</td>
-      <td>49,528</td>
-      <td>142,984</td>
-    </tr>
-	<tr>
-      <td>Gravity(m/s<span>2</span>))</td>
-      <td>9.8</td>
-      <td>3.7</td>
-      <td>11</td>
-      <td>23.1</td>
-    </tr>
-	 <tr>
-      <td>Distance from Sun(106 km)</td>
-      <td>149.6</td>
-      <td>228</td>
-      <td>4515</td>
-      <td>778.5</td>
-    </tr>
-    <tr>
-      <td>Rotation Period(hours)</td>
-      <td>23.9</td>
-      <td>24.6</td>
-      <td>16.1</td>
-      <td>9.9</td>
-    </tr>
-    <tr>
-      <td>Length of Day(hours)</td>
-      <td>24.0</td>
-      <td>24.7</td>
-      <td>16.1</td>
-      <td>9.9</td>
-    </tr>
-	 <tr>
-      <td>Orbital Period(days)</td>
-      <td>365.2</td>
-      <td>687</td>
-      <td>59,800</td>
-      <td>4331</td>
-    </tr>
-  </table>
+  <div class="web-background">
+    <h1>Planetary Fact Sheet</h1>
+    <table id="planets">
+      <tr>
+        <th></th>
+        <th>EARTH</th>
+        <th>MARS</th>
+        <th>NEPTUNE</th>
+        <th>JUPITER</th>
+      </tr>
+	  
+      <tr>
+        <td>Images of Plants</td>
+        <td><img src="images/earth.jpg" alt="a vector earth image has terrain in the land and cloud layers as detail. The image is placed on a starry sky as background."></td>
+        <td><img src="images/mars.jpg" alt="a vector mars uses majorly red and brown as detail. The top of mars has a part that is colored gray. The image is placed on a starry sky as background."></td>
+        <td><img src="images/neptune.jpg" alt="A vector neptune image is colored in sea blue and dark blue on the surface as detail. Some sky blue dots represent clouds. The image is placed on a starry sky as background."></td>
+        <td><img src="images/jupiter.jpg" alt="a vector jupiter image has sky blue and earth yellow to create details of the surface. The image is placed on a starry sky as background."></td>
+      </tr>
+	  
+      <tr>
+        <td>Mass(10<span class="unitsquare">24</span>kg)</td>
+        <td>5.97</td>
+        <td>0.642	</td>
+        <td>102</td>
+        <td>1898</td>
+      </tr>
+	  
+      <tr class="td-background-color">
+        <td>Diameter(km)</td>
+        <td>12,756</td>
+        <td>6792</td>
+        <td>49,528</td>
+        <td>142,984</td>
+      </tr>
+	  
+	  <tr>
+        <td>Gravity(m/s<span class="unitsquare">2</span>)</td>
+        <td>9.8</td>
+        <td>3.7</td>
+        <td>11</td>
+        <td>23.1</td>
+      </tr>
+	  
+	   <tr class="td-background-color">
+        <td>Distance from Sun(10<span class="unitsquare">6</span>km)</td>
+        <td>149.6</td>
+        <td>228</td>
+        <td>4515</td>
+        <td>778.5</td>
+      </tr>
+	  
+      <tr>
+        <td>Rotation Period(hours)</td>
+        <td>23.9</td>
+        <td>24.6</td>
+        <td>16.1</td>
+        <td>9.9</td>
+      </tr>
+	  
+      <tr class="td-background-color">
+        <td>Length of Day(hours)</td>
+        <td>24.0</td>
+        <td>24.7</td>
+        <td>16.1</td>
+        <td>9.9</td>
+      </tr>
+	  
+	   <tr>
+        <td>Orbital Period(days)</td>
+        <td>365.2</td>
+        <td>687</td>
+        <td>59,800</td>
+        <td>4331</td>
+      </tr>
+    </table>
+  </div>	
 </body>
 </html>
