edit reset and style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Your Title Here</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="reset.css">
 </head>
 <body>
   <div class="web-background">
@@ -11,18 +12,18 @@
     <table id="planets">
       <tr>
         <th></th>
-        <th>EARTH</th>
-        <th>MARS</th>
-        <th>NEPTUNE</th>
-        <th>JUPITER</th>
+        <th class="planets-name">Plant we live</th>
+        <th class="planets-name">Plant we can move to</th>
+        <th class="planets-name">Prevailing star A</th>
+        <th class="planets-name">Prevailing star B</th>
       </tr>
 	  
       <tr>
         <td>Images of Plants</td>
-        <td><img src="images/earth.jpg" alt="a vector earth image has terrain in the land and cloud layers as detail. The image is placed on a starry sky as background."></td>
-        <td><img src="images/mars.jpg" alt="a vector mars uses majorly red and brown as detail. The top of mars has a part that is colored gray. The image is placed on a starry sky as background."></td>
-        <td><img src="images/neptune.jpg" alt="A vector neptune image is colored in sea blue and dark blue on the surface as detail. Some sky blue dots represent clouds. The image is placed on a starry sky as background."></td>
-        <td><img src="images/jupiter.jpg" alt="a vector jupiter image has sky blue and earth yellow to create details of the surface. The image is placed on a starry sky as background."></td>
+        <td><img src="images/earth.jpg" alt="a vector earth image has terrain in the land and cloud layers as detail. The image is placed on a starry sky as background." class="planets-image-rcorners"></td>
+        <td><img src="images/mars.jpg" alt="a vector mars uses majorly red and brown as detail. The top of mars has a part that is colored gray. The image is placed on a starry sky as background." class="planets-image-rcorners"></td>
+        <td><img src="images/neptune.jpg" alt="A vector neptune image is colored in sea blue and dark blue on the surface as detail. Some sky blue dots represent clouds. The image is placed on a starry sky as background." class="planets-image-rcorners"></td>
+        <td><img src="images/jupiter.jpg" alt="a vector jupiter image has sky blue and earth yellow to create details of the surface. The image is placed on a starry sky as background." class="planets-image-rcorners"></td>
       </tr>
 	  
       <tr>
