--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Your Title Here</title>
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="reset.css">
 </head>
 <body>
   <div class="web-background">
