--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <td><img src="images/jupiter.jpg" alt="a vector jupiter image has sky blue and earth yellow to create details of the surface. The image is placed on a starry sky as background." class="planets-image-rcorners"></td>
       </tr>
 	  
-      <tr>
+      <tr class="td-background-color-2">
         <td>Mass(10<span class="unitsquare">24</span>kg)</td>
         <td>5.97</td>
         <td>0.642	</td>
@@ -42,7 +42,7 @@
         <td>142,984</td>
       </tr>
 	  
-	  <tr>
+	  <tr class="td-background-color-2">
         <td>Gravity(m/s<span class="unitsquare">2</span>)</td>
         <td>9.8</td>
         <td>3.7</td>
@@ -58,7 +58,7 @@
         <td>778.5</td>
       </tr>
 	  
-      <tr>
+      <tr class="td-background-color-2">
         <td>Rotation Period(hours)</td>
         <td>23.9</td>
         <td>24.6</td>
@@ -74,7 +74,7 @@
         <td>9.9</td>
       </tr>
 	  
-	   <tr>
+	   <tr class="td-background-color-2">
         <td>Orbital Period(days)</td>
         <td>365.2</td>
         <td>687</td>
