--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Title Here</title>
+  <title>Planetary Fact Sheet</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +19,7 @@
       </tr>
 	  
       <tr>
-        <td>Images of Plants</td>
+        <td id="radar"></td>
         <td><img src="images/earth.jpg" alt="a vector earth image has terrain in the land and cloud layers as detail. The image is placed on a starry sky as background." class="planets-image-rcorners"></td>
         <td><img src="images/mars.jpg" alt="a vector mars uses majorly red and brown as detail. The top of mars has a part that is colored gray. The image is placed on a starry sky as background." class="planets-image-rcorners"></td>
         <td><img src="images/neptune.jpg" alt="A vector neptune image is colored in sea blue and dark blue on the surface as detail. Some sky blue dots represent clouds. The image is placed on a starry sky as background." class="planets-image-rcorners"></td>
